# Studying-light

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_pages_fields.py  0003_add_session_seconds.py  0004_add_page_end.py  0005_add_gpt_review_feedback.py  0006_add_algorithms_tables.py  0007_add_algorithm_group_title_norm.py  0008_add_algorithm_training_attempts.py  0009_add_algorithm_training_metrics.py  0010_add_users_table.py  0011_user_settings_per_user.py  0012_scope_domain_data_by_user.py  0013_add_password_reset_requests.py  0014_add_audit_log_and_admin_reset_fields.py  0015_add_user_activity_events.py  0016_add_user_activity_event_unique_refs.py
docker/: DockerFile  entrypoint.sh
docs/: database.md  oss-recommendations.md
docs/specs/: api-boundaries.md  architecture.md  data-model.md  pages.md  review-scheduling.md
frontend/: index.html  package.json  playwright.config.js  tailwind.config.js
frontend/public/landing/: README.md
frontend/scripts/: capture-landing-screenshots.mjs
frontend/src/: App.jsx  adminPerformance.js  api.js  auth.jsx  date.js  main.jsx  navigation.js  router.jsx  styles.css  theme.js
frontend/src/components/: AdminPagination.jsx  AuthLayout.jsx  ErrorBanner.jsx  Markdown.jsx
frontend/src/pages/: About.jsx  AdminPasswordResets.jsx  AdminPerformance.jsx  AdminPerformanceUser.jsx  AdminUsers.jsx  AlgorithmDetail.jsx  AlgorithmGroupDetail.jsx  (+14 more)
frontend/tests/: e2e.spec.js
src/studying_light/: __init__.py  main.py  security.py
tests/: conftest.py  test_activity_events.py  test_admin_api.py  test_admin_performance_api.py  test_algorithm_import_groups.py  test_algorithm_management_api.py  test_algorithm_training.py  test_auth_api.py  test_auth_settings.py  test_backfill_user_activity_events.py  test_database_config.py  test_import_gpt_json_input.py  test_multi_user_isolation.py  test_ownership_audit.py  test_pages_progress.py  test_parts_creation.py  test_profile_transfer_api.py  test_review_flow.py  test_user_activity_event_unique_migration.py  test_users_model.py
(+57 files in other folders)
