[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studying-light"
version = "0.1.0"
description = "Reading and review companion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
studying_light = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
