[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studying-light"
version = "0.2.0"
description = "Reading and review companion."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kerysfel", email = "newerasowwor@gmail.com" }]
keywords = ["reading", "study", "spaced-repetition", "fastapi", "react"]
urls = { "Homepage" = "https://github.com/Kerysfel/Studying-light", "Repository" = "https://github.com/Kerysfel/Studying-light", "Issues" = "https://github.com/Kerysfel/Studying-light/issues", "Changelog" = "https://github.com/Kerysfel/Studying-light/blob/main/CHANGELOG.md", "Documentation" = "https://github.com/Kerysfel/Studying-light#readme" }
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
studying_light = ["py.typed", "prompts/*.txt"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
